--- a/AntPlusMauiClient/AppShell.xaml
+++ b/AntPlusMauiClient/AppShell.xaml
@@ -3,12 +3,11 @@
     x:Class="AntPlusMauiClient.AppShell"
     xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
     xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
-    xmlns:local="clr-namespace:AntPlusMauiClient"
+    xmlns:local="clr-namespace:AntPlusMauiClient.Pages"
     Title="AntPlusMauiClient">
 
     <ShellContent
         Title="Home"
-        ContentTemplate="{DataTemplate local:MainPage}"
-        Route="MainPage" />
+        ContentTemplate="{DataTemplate local:MainPage}" />
 
 </Shell>
