Refine unknown device view. Add offline status to AntDevicePage.

--- a/AntPlusMauiClient/App.xaml
+++ b/AntPlusMauiClient/App.xaml
@@ -9,6 +9,15 @@
                 <ResourceDictionary Source="Resources/Styles/Colors.xaml" />
                 <ResourceDictionary Source="Resources/Styles/Styles.xaml" />
             </ResourceDictionary.MergedDictionaries>
+
+            <Style TargetType="Label" x:Key="OfflineStyle">
+                <Setter Property="VerticalOptions" Value="Center"/>
+                <Setter Property="HorizontalOptions" Value="Center"/>
+                <Setter Property="Opacity" Value="0.4"/>
+                <Setter Property="FontSize" Value="48"/>
+                <Setter Property="FontAttributes" Value="Bold"/>
+                <Setter Property="Text" Value="OFFLINE"/>
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
