--- a/AntPlusMauiClient/App.xaml
+++ b/AntPlusMauiClient/App.xaml
@@ -18,6 +18,13 @@
                 <Setter Property="FontAttributes" Value="Bold"/>
                 <Setter Property="Text" Value="OFFLINE"/>
             </Style>
+
+            <Style TargetType="Border">
+                <Setter Property="Margin" Value="8"/>
+                <Setter Property="Padding" Value="8, 4, 8, 4"/>
+                <Setter Property="Stroke" Value="{AppThemeBinding Light={StaticResource BlackBrush}, Dark={StaticResource WhiteBrush}}"/>
+                <Setter Property="StrokeShape" Value="RoundRectangle 8"/>
+            </Style>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
