--- a/AntPlusMauiClient/Views/HeartRateView.xaml
+++ b/AntPlusMauiClient/Views/HeartRateView.xaml
@@ -2,11 +2,56 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:AntPlusMauiClient.ViewModels"
+             xmlns:views="clr-namespace:AntPlusMauiClient.Views"
+             xmlns:tabview="clr-namespace:Syncfusion.Maui.Toolkit.TabView;assembly=Syncfusion.Maui.Toolkit"
+             x:DataType="vm:HeartRateViewModel"
              x:Class="AntPlusMauiClient.Views.HeartRateView">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <tabview:SfTabView>
+        <tabview:SfTabView.Items>
+            <tabview:SfTabItem Header="Heart Rate Data">
+                <tabview:SfTabItem.Content>
+                    <StackLayout>
+                        <Border>
+                            <StackLayout>
+                                <Label Text="Heart Rate" FontAttributes="Bold" TextDecorations="Underline"/>
+                                <Label Text="{Binding HeartRate.HeartRateData.ComputedHeartRate, StringFormat='Heart Rate: {0}'}"/>
+                                <Label Text="{Binding HeartRate.HeartRateData.RRInterval, StringFormat='RR Interval: {0}'}"/>
+                                <Label Text="{Binding HeartRate.HeartRateData.AccumulatedHeartBeatEventTime, StringFormat='Accumulated Heartbeat Event Time: {0}'}"/>
+                                <Label Text="{Binding HeartRate.CumulativeOperatingTime, StringFormat='Cumulative Operating Time: {0}'}"/>
+                                <Label Text="{Binding HeartRate.EventType, StringFormat='Heartbeat Event Type: {0}'}"/>
+                            </StackLayout>
+                        </Border>
+                        <Border>
+                            <StackLayout>
+                                <Label Text="Manufacturer Info" FontAttributes="Bold" TextDecorations="Underline"/>
+                                <Label Text="{Binding HeartRate.ManufacturerInfo.ManufacturingIdLsb, StringFormat='Man ID LSB: {0}'}"/>
+                                <Label Text="{Binding HeartRate.ManufacturerInfo.SerialNumber, StringFormat='Serial Number: {0}'}"/>
+                            </StackLayout>
+                        </Border>
+                        <Border>
+                            <StackLayout>
+                                <Label Text="Product Info" FontAttributes="Bold" TextDecorations="Underline"/>
+                                <Label Text="{Binding HeartRate.ProductInfo.HardwareVersion, StringFormat='Hardware Version: {0}'}"/>
+                                <Label Text="{Binding HeartRate.ProductInfo.SoftwareVersion, StringFormat='Software Version: {0}'}"/>
+                                <Label Text="{Binding HeartRate.ProductInfo.ModelNumber, StringFormat='Model Number: {0}'}"/>
+                            </StackLayout>
+                        </Border>
+                        <Border>
+                            <StackLayout>
+                                <Label Text="Battery Status" FontAttributes="Bold" TextDecorations="Underline"/>
+                                <Label Text="{Binding HeartRate.BatteryStatus.BatteryLevel, StringFormat='Battery Level: {0}'}"/>
+                                <Label Text="{Binding HeartRate.BatteryStatus.BatteryStatus, StringFormat='Battery Status: {0}'}"/>
+                                <Label Text="{Binding HeartRate.BatteryStatus.BatteryVoltage, StringFormat='Battery Voltage: {0:F1}'}"/>
+                            </StackLayout>
+                        </Border>
+                    </StackLayout>
+                </tabview:SfTabItem.Content>
+            </tabview:SfTabItem>
+            <tabview:SfTabItem Header="Common Data Pages">
+                <tabview:SfTabItem.Content>
+                    <views:CommonDataPagesView CommonDataPages="{Binding HeartRateMonitor.CommonDataPages}"/>
+                </tabview:SfTabItem.Content>
+            </tabview:SfTabItem>
+        </tabview:SfTabView.Items>
+    </tabview:SfTabView>
 </ContentView>
