--- a/AntPlusMauiClient/Pages/AntDevicePage.xaml
+++ b/AntPlusMauiClient/Pages/AntDevicePage.xaml
@@ -14,7 +14,7 @@
         </ResourceDictionary>
     </ContentPage.Resources>
 
-    <VerticalStackLayout Padding="30,0" Spacing="12">
+    <Grid Margin="10" RowDefinitions="Auto, *">
         <Grid ColumnSpacing="16">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
@@ -35,7 +35,7 @@
                      Grid.Column="1"
                      Grid.Row="1"/>
         </Grid>
-        <ContentView Content="{Binding AntDeviceView}"/>
-        <Label Style="{StaticResource OfflineStyle}" IsVisible="{Binding Device.Offline}"/>
-    </VerticalStackLayout>
+        <ContentView Content="{Binding AntDeviceView}" Grid.Row="1"/>
+        <Label Style="{StaticResource OfflineStyle}" IsVisible="{Binding Device.Offline}" Grid.RowSpan="2"/>
+    </Grid>
 </ContentPage>
