--- a/AntPlusMauiClient/Views/BikeSpeedAndCadenceView.xaml
+++ b/AntPlusMauiClient/Views/BikeSpeedAndCadenceView.xaml
@@ -2,11 +2,14 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:AntPlusMauiClient.ViewModels"
+             x:DataType="vm:BikeSpeedAndCadenceViewModel"
              x:Class="AntPlusMauiClient.Views.BikeSpeedAndCadenceView">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <Border>
+        <StackLayout>
+            <Label Text="Sensor Data" FontAttributes="Bold" TextDecorations="Underline"/>
+            <Label Text="{Binding CombinedSpeedAndCadenceSensor.InstantaneousCadence, StringFormat='Instantaneous Cadence: {0:F3}'}"/>
+            <Label Text="{Binding CombinedSpeedAndCadenceSensor.InstantaneousSpeed, StringFormat='Instantaneous Speed: {0:F3}'}"/>
+            <Label Text="{Binding CombinedSpeedAndCadenceSensor.AccumulatedDistance, StringFormat='Accumulated Distance: {0:F3}'}"/>
+        </StackLayout>
+    </Border>
 </ContentView>
