--- a/AntPlusMauiClient/Views/BikeSpeedView.xaml
+++ b/AntPlusMauiClient/Views/BikeSpeedView.xaml
@@ -2,11 +2,39 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:AntPlusMauiClient.ViewModels"
+             x:DataType="vm:BikeSpeedViewModel"
              x:Class="AntPlusMauiClient.Views.BikeSpeedView">
-    <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
-    </VerticalStackLayout>
+    <StackLayout>
+        <Border>
+            <StackLayout>
+                <Label Text="Speed and Distance" FontAttributes="Bold" TextDecorations="Underline"/>
+                <Label Text="{Binding BikeSpeedSensor.InstantaneousSpeed, StringFormat='Instantaneous Speed: {0:F3}'}"/>
+                <Label Text="{Binding BikeSpeedSensor.AccumulatedDistance, StringFormat='Accumulated Distance: {0:F3}'}"/>
+                <Label Text="{Binding BikeSpeedSensor.CumulativeOperatingTime, StringFormat='Operating Time: {0}'}"/>
+                <Label Text="{Binding BikeSpeedSensor.Stopped, StringFormat='Stopped: {0}'}"/>
+            </StackLayout>
+        </Border>
+        <Border>
+            <StackLayout>
+                <Label Text="Manufacturer Info" FontAttributes="Bold" TextDecorations="Underline"/>
+                <Label Text="{Binding BikeSpeedSensor.ManufacturerInfo.ManufacturingId, StringFormat='Manufacturer Id: {0}'}"/>
+                <Label Text="{Binding BikeSpeedSensor.ManufacturerInfo.SerialNumber, StringFormat='Serial Number: {0}'}"/>
+            </StackLayout>
+        </Border>
+        <Border>
+            <StackLayout>
+                <Label Text="Product Info" FontAttributes="Bold" TextDecorations="Underline"/>
+                <Label Text="{Binding BikeSpeedSensor.ProductInfo.HardwareVersion, StringFormat='Hardware Version: {0}'}"/>
+                <Label Text="{Binding BikeSpeedSensor.ProductInfo.ModelNumber, StringFormat='Model #: {0}'}"/>
+                <Label Text="{Binding BikeSpeedSensor.ProductInfo.SoftwareVersion, StringFormat='Software Version: {0}'}"/>
+            </StackLayout>
+        </Border>
+        <Border>
+            <StackLayout>
+                <Label Text="Battery Status" FontAttributes="Bold" TextDecorations="Underline"/>
+                <Label Text="{Binding BikeSpeedSensor.BatteryStatus.BatteryStatus, StringFormat='Status: {0}'}"/>
+                <Label Text="{Binding BikeSpeedSensor.BatteryStatus.BatteryVoltage, StringFormat='Voltage: {0}'}"/>
+            </StackLayout>
+        </Border>
+    </StackLayout>
 </ContentView>
