--- a/AntPlusMauiClient/Views/CTFView.xaml
+++ b/AntPlusMauiClient/Views/CTFView.xaml
@@ -2,11 +2,31 @@
 <ContentView xmlns="http://schemas.microsoft.com/dotnet/2021/maui"
              xmlns:x="http://schemas.microsoft.com/winfx/2009/xaml"
              xmlns:vm="clr-namespace:AntPlusMauiClient.ViewModels"
+             x:DataType="vm:CTFViewModel"
              x:Class="AntPlusMauiClient.Views.CTFView">
     <VerticalStackLayout>
-        <Label 
-            Text="Welcome to .NET MAUI!"
-            VerticalOptions="Center" 
-            HorizontalOptions="Center" />
+        <Border>
+            <StackLayout>
+                <Label Text="Crank Torque Frequency" FontAttributes="Bold" TextDecorations="Underline"/>
+                <Label Text="{Binding Sensor.Slope, StringFormat='Slope (Nm/Hz): {0:F1}'}"/>
+                <Label Text="{Binding Sensor.Cadence, StringFormat='Cadence (RPM): {0:F3}'}"/>
+                <Label Text="{Binding Sensor.Torque, StringFormat='Torque (Nm): {0:F3}'}"/>
+                <Label Text="{Binding Sensor.Power, StringFormat='Power (Watts): {0:F3}'}"/>
+            </StackLayout>
+        </Border>
+        <Border>
+            <StackLayout>
+                <Label Text="Calibration" FontAttributes="Bold" TextDecorations="Underline"/>
+                <Grid ColumnDefinitions="Auto, Auto" RowDefinitions="Auto, Auto, Auto, Auto" ColumnSpacing="16" RowSpacing="8" Margin="8">
+                    <Button Text="Calibration Request" Command="{Binding ManualCalRequestCommand}"/>
+                    <Label Text="{Binding Sensor.Offset, StringFormat='Calibration Offset (Hz): {0}'}" Grid.Column="1" VerticalOptions="Center"/>
+                    <Entry Grid.Column="1" Grid.Row="1" x:Name="Slope" Keyboard="Numeric" Placeholder="Enter a value from 10.0 to 50.0"/>
+                    <Button Grid.Column="0" Grid.Row="1" Text="Save Slope to Flash" Command="{Binding SaveSlopeCommand}" CommandParameter="{Binding Text, Source={x:Reference Slope}, x:DataType=Entry}"/>
+                    <Entry Grid.Column="1" Grid.Row="2" x:Name="SerialNumber" Keyboard="Numeric" Placeholder="0 to 65535"/>
+                    <Button Grid.Column="0" Grid.Row="2" Text="Save Serial Number to Flash" Command="{Binding SaveSerialNumberCommand}" CommandParameter="{Binding Text, Source={x:Reference SerialNumber}, x:DataType=Entry}"/>
+                    <Label Grid.ColumnSpan="2" Grid.Row="3" VerticalOptions="Center" Text="{Binding Sensor.CalibrationStatus, StringFormat='Operation Status: {0}'}"/>
+                </Grid>
+            </StackLayout>
+        </Border>
     </VerticalStackLayout>
 </ContentView>
