--- a/AntPlusMauiClient/Pages/MainPage.xaml
+++ b/AntPlusMauiClient/Pages/MainPage.xaml
@@ -12,6 +12,22 @@
         <ResourceDictionary>
             <conv:StreamToImageSourceConverter x:Key="StreamToImage"/>
         </ResourceDictionary>
+
+        <Style TargetType="Grid">
+            <Setter Property="VisualStateManager.VisualStateGroups">
+                <VisualStateGroupList>
+                    <VisualStateGroup x:Name="CommonStates">
+                        <VisualState x:Name="Normal" />
+                        <VisualState x:Name="Selected">
+                            <VisualState.Setters>
+                                <Setter Property="BackgroundColor"
+                                        Value="LightSkyBlue" />
+                            </VisualState.Setters>
+                        </VisualState>
+                    </VisualStateGroup>
+                </VisualStateGroupList>
+            </Setter>
+        </Style>
     </ContentPage.Resources>
     
     <ScrollView>
@@ -36,7 +52,7 @@
                     Grid.RowSpan="4"
                     Grid.Column="0"
                     Source="antplus.png"
-                    HeightRequest="145"
+                    HeightRequest="140"
                     Aspect="AspectFit"
                     SemanticProperties.Description="ant plus server" />
 
@@ -57,10 +73,10 @@
                     <Label Text="{Binding HostVersion}" FontSize="Default" Margin="24, 0, 0, 8"/>
                 </VerticalStackLayout>
 
-                <exp:SfExpander Grid.Column="1" Grid.Row="4">
+                <exp:SfExpander Grid.ColumnSpan="2" Grid.Row="4">
                     <exp:SfExpander.Header>
                         <Grid>
-                            <Label Text="ANT+ Radio Capabilities" FontSize="Subtitle" FontAttributes="Bold"  />
+                            <Label Text="ANT+ Radio Capabilities" FontSize="Subtitle" FontAttributes="Bold" HorizontalTextAlignment="Center"/>
                         </Grid>
                     </exp:SfExpander.Header>
                     <exp:SfExpander.Content>
@@ -79,7 +95,7 @@
                                     <CollectionView ItemsSource="{Binding Flags}">
                                         <CollectionView.ItemTemplate>
                                             <DataTemplate x:DataType="x:String">
-                                                <Label Text="{Binding ., StringFormat='- {0}'}"/>
+                                                <Label Text="{Binding ., StringFormat='- {0}'}" LineBreakMode="NoWrap"/>
                                             </DataTemplate>
                                         </CollectionView.ItemTemplate>
                                     </CollectionView>
@@ -103,15 +119,17 @@
                 </CollectionView.ItemsLayout>
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="ant:AntDevice">
-                        <Border>
-                            <Grid Padding="8" RowDefinitions="Auto, Auto" ColumnDefinitions="Auto, *, Auto">
-                                <Image Margin="0,0,10,0" Grid.RowSpan="2" Source="{Binding ., Converter={StaticResource StreamToImage}}" Aspect="AspectFill" HeightRequest="40"/>
-                                <Label Grid.Column="1" Text="{Binding .}"/>
-                                <Label Grid.Column="1" Grid.Row="1" Text="{Binding ChannelId.DeviceNumber, StringFormat='Device Number - {0}'}"/>
-                                <Image Source="more_arrow.png" Aspect="AspectFill" Background="Transparent"
+                        <Grid>
+                            <Border>
+                                <Grid Padding="8" RowDefinitions="Auto, Auto" ColumnDefinitions="Auto, *, Auto">
+                                    <Image Margin="0,0,10,0" Grid.RowSpan="2" Source="{Binding ., Converter={StaticResource StreamToImage}}" Aspect="AspectFit" HeightRequest="40"/>
+                                    <Label Grid.Column="1" Text="{Binding .}"/>
+                                    <Label Grid.Column="1" Grid.Row="1" Text="{Binding ChannelId.DeviceNumber, StringFormat='Device Number - {0}'}"/>
+                                    <Image Source="more_arrow.png" Aspect="AspectFill" Background="Transparent"
                                        Grid.Column="2" Grid.RowSpan="2" HeightRequest="32" WidthRequest="32"/>
-                            </Grid>
-                        </Border>
+                                </Grid>
+                            </Border>
+                        </Grid>
                     </DataTemplate>
                 </CollectionView.ItemTemplate>
             </CollectionView>
