--- a/AntPlusMauiClient/Views/AssetTrackerView.xaml
+++ b/AntPlusMauiClient/Views/AssetTrackerView.xaml
@@ -5,36 +5,45 @@
              xmlns:views="clr-namespace:AntPlusMauiClient.Views"
              xmlns:tracker="clr-namespace:SmallEarthTech.AntPlus.DeviceProfiles.AssetTracker;assembly=SmallEarthTech.AntPlus"
              xmlns:tabview="clr-namespace:Syncfusion.Maui.Toolkit.TabView;assembly=Syncfusion.Maui.Toolkit"
+             xmlns:exp="clr-namespace:Syncfusion.Maui.Toolkit.Expander;assembly=Syncfusion.Maui.Toolkit"
              x:DataType="vm:AssetTrackerViewModel"
              x:Class="AntPlusMauiClient.Views.AssetTrackerView">
     <tabview:SfTabView>
         <tabview:SfTabView.Items>
-            <tabview:SfTabItem Header="Asset Tracker">
+            <tabview:SfTabItem Header="Assets">
                 <tabview:SfTabItem.Content>
-                    <tabview:SfTabView ItemsSource="{Binding Tracker.Assets}" TabBarPlacement="Bottom" IndicatorPlacement="Top" TabWidthMode="SizeToContent">
-                        <tabview:SfTabView.HeaderItemTemplate>
+                    <CollectionView ItemsSource="{Binding Tracker.Assets}" VerticalScrollBarVisibility="Never">
+                        <CollectionView.ItemsLayout>
+                            <LinearItemsLayout Orientation="Vertical" ItemSpacing="4"/>
+                        </CollectionView.ItemsLayout>
+                        <CollectionView.ItemTemplate>
                             <DataTemplate x:DataType="tracker:Asset">
-                                <Label Text="{Binding Index, StringFormat='Index {0}'}" Margin="16, 8, 16,0"/>
+                                <Border>
+                                    <exp:SfExpander>
+                                        <exp:SfExpander.Header>
+                                            <Label Text="{Binding Index, StringFormat='Index {0}'}" FontAttributes="Bold" FontSize="Medium" Padding="10,0"/>
+                                        </exp:SfExpander.Header>
+                                        <exp:SfExpander.Content>
+                                            <StackLayout Padding="10">
+                                                <Label Text="{Binding Name, StringFormat='Name: {0}'}" FontAttributes="Bold" FontSize="Medium"/>
+                                                <Label Text="{Binding Bearing, StringFormat='Bearing: {0}'}"/>
+                                                <Label Text="{Binding Color, StringFormat='Color: {0}'}"/>
+                                                <Label Text="{Binding Distance, StringFormat='Distance: {0}'}"/>
+                                                <Label Text="{Binding Latitude, StringFormat='Latitude: {0}'}"/>
+                                                <Label Text="{Binding Longitude, StringFormat='Longitude: {0}'}"/>
+                                                <Label Text="{Binding Situation, StringFormat='Situation: {0}'}"/>
+                                                <Label Text="{Binding Status, StringFormat='Status: {0}'}"/>
+                                                <Label Text="{Binding Type, StringFormat='Type: {0}'}"/>
+                                            </StackLayout>
+                                        </exp:SfExpander.Content>
+                                    </exp:SfExpander>
+                                </Border>
                             </DataTemplate>
-                        </tabview:SfTabView.HeaderItemTemplate>
-                        <tabview:SfTabView.ContentItemTemplate>
-                            <DataTemplate x:DataType="tracker:Asset">
-                                <StackLayout Padding="10">
-                                    <Label Text="{Binding Name, StringFormat='Name: {0}'}" FontAttributes="Bold" FontSize="Medium"/>
-                                    <Label Text="{Binding Bearing, StringFormat='Bearing: {0}'}"/>
-                                    <Label Text="{Binding Color, StringFormat='Color: {0}'}"/>
-                                    <Label Text="{Binding Distance, StringFormat='Distance: {0}'}"/>
-                                    <Label Text="{Binding Latitude, StringFormat='Latitude: {0}'}"/>
-                                    <Label Text="{Binding Longitude, StringFormat='Longitude: {0}'}"/>
-                                    <Label Text="{Binding Situation, StringFormat='Situation: {0}'}"/>
-                                    <Label Text="{Binding Status, StringFormat='Status: {0}'}"/>
-                                    <Label Text="{Binding Type, StringFormat='Type: {0}'}"/>
-                                </StackLayout>
-                            </DataTemplate>
-                        </tabview:SfTabView.ContentItemTemplate>
-                    </tabview:SfTabView>
+                        </CollectionView.ItemTemplate>
+                    </CollectionView>
                 </tabview:SfTabItem.Content>
             </tabview:SfTabItem>
+            
             <tabview:SfTabItem Header="Common Data Pages">
                 <tabview:SfTabItem.Content>
                     <views:CommonDataPagesView CommonDataPages="{Binding Tracker.CommonDataPages}"/>
