Implement Gemini scrollbar suggestion.

--- a/AntPlusMauiClient/Views/AssetTrackerView.xaml
+++ b/AntPlusMauiClient/Views/AssetTrackerView.xaml
@@ -12,7 +12,7 @@
         <tabview:SfTabView.Items>
             <tabview:SfTabItem Header="Assets">
                 <tabview:SfTabItem.Content>
-                    <CollectionView ItemsSource="{Binding Tracker.Assets}" VerticalScrollBarVisibility="Never">
+                    <CollectionView ItemsSource="{Binding Tracker.Assets}" VerticalScrollBarVisibility="Default">
                         <CollectionView.ItemsLayout>
                             <LinearItemsLayout Orientation="Vertical" ItemSpacing="4"/>
                         </CollectionView.ItemsLayout>
