--- a/AntPlusMauiClient/Views/BicyclePowerView.xaml
+++ b/AntPlusMauiClient/Views/BicyclePowerView.xaml
@@ -11,27 +11,107 @@
         <tabview:SfTabView.Items>
             <tabview:SfTabItem Header="Bicycle">
                 <tabview:SfTabItem.Content>
-                    <Border>
-                        <StackLayout>
-                            <Label Text="{Binding Sensor.InstantaneousCadence, StringFormat='Cadence: {0}'}"/>
-                            <Label Text="{Binding Sensor.InstantaneousPower, StringFormat='Instantaneous Power: {0}'}"/>
-                        </StackLayout>
-                    </Border>
+                    <StackLayout>
+                        <ContentView Content="{Binding TorqueSensorView}"/>
+                        <Border>
+                            <StackLayout>
+                                <Label Text="Standard Power" FontAttributes="Bold" TextDecorations="Underline"/>
+                                <Label Text="{Binding Sensor.PedalPower, StringFormat='Pedal Power (%): {0}'}"/>
+                                <Label Text="{Binding Sensor.PedalContribution, StringFormat='Pedal Contribution: {0}'}"/>
+                                <Label Text="{Binding Sensor.InstantaneousCadence, StringFormat='Instantaneous Cadence (RPM): {0}'}"/>
+                                <Label Text="{Binding Sensor.InstantaneousPower, StringFormat='Instantaneous Power (Watts): {0}'}"/>
+                                <Label Text="{Binding Sensor.AveragePower, StringFormat='Average Power (Watts): {0:F3}'}"/>
+                            </StackLayout>
+                        </Border>
+                        <Border>
+                            <StackLayout>
+                                <Label Text="Torque Effectivenes and Pedal Smoothness" FontAttributes="Bold" TextDecorations="Underline"/>
+                                <Label Text="{Binding Sensor.CombinedPedalSmoothness, StringFormat='Combined Pedal Smoothness: {0}'}"/>
+                                <Label Text="{Binding Sensor.LeftPedalSmoothness, StringFormat='Left Pedal Smoothness: {0}'}"/>
+                                <Label Text="{Binding Sensor.LeftTorqueEffectiveness, StringFormat='Left Torque Effectiveness: {0}'}"/>
+                                <Label Text="{Binding Sensor.RightPedalSmoothness, StringFormat='Right Pedal Smoothness: {0}'}"/>
+                                <Label Text="{Binding Sensor.RightTorqueEffectiveness, StringFormat='Right Torque Effectiveness: {0}'}"/>
+                            </StackLayout>
+                        </Border>
+                    </StackLayout>
                 </tabview:SfTabItem.Content>
             </tabview:SfTabItem>
             <tabview:SfTabItem Header="Calibration">
                 <tabview:SfTabItem.Content>
-                    
+                    <StackLayout>
+                        <Border>
+                            <StackLayout>
+                                <Label Text="Status" FontAttributes="Bold" TextDecorations="Underline"/>
+                                <Label Text="{Binding Sensor.CalibrationStatus, StringFormat='Calibration Status: {0}'}"/>
+                                <Label Text="{Binding Sensor.AutoZeroSupported, StringFormat='Auto Zero Supported: {0}'}"/>
+                                <Label Text="{Binding Sensor.AutoZeroStatus, StringFormat='Auto Zero Status: {0}'}"/>
+                                <Label Text="{Binding Sensor.CalibrationData, StringFormat='Calibration Data: {0}'}"/>
+                                <Button Text="Manual Calibration Request" HorizontalOptions="Start" Command="{Binding ManualCalRequestCommand}" Margin="0, 8, 0, 8"/>
+                                <Button Text="Toggle Auto Zero Configuration" HorizontalOptions="Start" Command="{Binding SetAutoZeroConfigCommand}" />
+                            </StackLayout>
+                        </Border>
+                        <Border>
+                            <StackLayout>
+                                <Label Text="Measurement Output Data" FontAttributes="Bold" TextDecorations="Underline"/>
+                                <CollectionView ItemsSource="{Binding Sensor.Measurements}">
+                                    <CollectionView.ItemTemplate>
+                                        <DataTemplate x:DataType="bp:MeasurementOutputData">
+                                            <StackLayout Margin="4">
+                                                <Label Text="{Binding MeasurementType, StringFormat='Measurement Type: {0}'}"/>
+                                                <Label Text="{Binding Timestamp, StringFormat='Timestamp: {0}'}"/>
+                                                <Label Text="{Binding Measurement, StringFormat='Measurement: {0}'}"/>
+                                            </StackLayout>
+                                        </DataTemplate>
+                                    </CollectionView.ItemTemplate>
+                                </CollectionView>
+                            </StackLayout>
+                        </Border>
+                        <Border>
+                            <StackLayout>
+                                <Label Text="Custom Calibration Parameters" FontAttributes="Bold" TextDecorations="Underline"/>
+                                <Grid ColumnDefinitions="Auto, Auto" RowDefinitions="Auto, Auto" ColumnSpacing="16" RowSpacing="8" Margin="8">
+                                    <Button Text="Get Parameters" Command="{Binding GetCustomCalParametersCommand}"/>
+                                    <Label Text="{Binding Sensor.CustomCalibrationParameters, StringFormat='Parameters: {0}'}" Grid.Column="1" VerticalOptions="Center"/>
+                                    <Button Text="Set Parameters" Command="{Binding SetCustomCalParametersCommand}" CommandParameter="{Binding Text, Source={x:Reference CustomCalParms}, x:DataType=Entry}" Grid.Row="1"/>
+                                    <Entry Placeholder="Enter 6 hae bytes" x:Name="CustomCalParms" Grid.Column="1" Grid.Row="1"/>
+                                </Grid>
+                            </StackLayout>
+                        </Border>
+                    </StackLayout>
                 </tabview:SfTabItem.Content>
             </tabview:SfTabItem>
             <tabview:SfTabItem Header="Parameters">
                 <tabview:SfTabItem.Content>
-
+                    <StackLayout>
+                        <Border>
+                            <StackLayout>
+                                <Label Text="Crank Settings" FontAttributes="Bold" TextDecorations="Underline"/>
+                                <Label Text="{Binding Sensor.Crank.CrankLength, StringFormat='Crank Length: {0}'}"/>
+                                <Label Text="{Binding Sensor.Crank.CrankStatus, StringFormat='Crank Status: {0}'}"/>
+                                <Label Text="{Binding Sensor.Crank.MismatchStatus, StringFormat='Mismatch Status: {0}'}"/>
+                                <Label Text="{Binding Sensor.Crank.AvailabilityStatus, StringFormat='Availability Status: {0}'}"/>
+                                <Label Text="{Binding Sensor.Crank.CustomCalibration, StringFormat='Custom Calibration: {0}'}"/>
+                                <Label Text="{Binding Sensor.Crank.AutoCrankLength, StringFormat='Auto Crank Length: {0}'}"/>
+                            </StackLayout>
+                        </Border>
+                        <Border>
+                            <StackLayout>
+                                <Label Text="Crank Control" FontAttributes="Bold" TextDecorations="Underline"/>
+                                <Grid ColumnDefinitions="Auto, Auto" RowDefinitions="*, *" ColumnSpacing="16" RowSpacing="8" Margin="8">
+                                    <Button Text="Get Crank Settings" Command="{Binding GetParametersCommand}"
+                                            CommandParameter="{x:Static bp:SubPage.CrankParameters}"/>
+                                    <Button Text="Set Crank Length" Grid.Row="1" Command="{Binding SetCrankLengthCommand}"
+                                            CommandParameter="{Binding Text, Source={x:Reference CrankLength}, x:DataType=Entry}"/>
+                                    <Entry x:Name="CrankLength" Placeholder="Crank length from 110mm to 236.6mm" Grid.Row="1" Grid.Column="1"/>
+                                </Grid>
+                            </StackLayout>
+                        </Border>
+                    </StackLayout>
                 </tabview:SfTabItem.Content>
             </tabview:SfTabItem>
             <tabview:SfTabItem Header="Common Data Pages">
                 <tabview:SfTabItem.Content>
-                    <views:CommonDataPagesView CommonDataPages="{Binding BicyclePower.CommonDataPages}"/>
+                    <views:CommonDataPagesView CommonDataPages="{Binding Sensor.CommonDataPages}"/>
                 </tabview:SfTabItem.Content>
             </tabview:SfTabItem>
         </tabview:SfTabView.Items>
